--- a/src/app/summon/summon.component.html
+++ b/src/app/summon/summon.component.html
@@ -1,16 +1,26 @@
 <div class="w-full p-6 bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700">
-    <label for="large" class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
+    <label for="summon_location" class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">
         Summon Robot
     </label>
     <div class="flex flex-row gap-3 justify-between">
-        <select id="large"
-            class="block basis-2/3 px-4 py-3 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+        <select id="summon_location"
+            class="block basis-2/3 px-4 py-3 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+            [(ngModel)]="location" [disabled]="disabled">
             <option selected>Choose location</option>
             <option *ngFor="let location of locations" [value]="location">{{location}}</option>
         </select>
         <button type="button"
-            class="basis-1/3 self-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">
-            Summon
+            class="basis-1/3 self-center text-white bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 focus:outline-none dark:focus:ring-blue-800"
+            (click)="onSummonClick()" [disabled]="disabled"
+            [ngClass]="disabled ? 'cursor-not-allowed' : 'hover:bg-blue-800 dark:hover:bg-blue-700'">
+            <div [ngClass]="disabled ? 'hidden' : ''">Summon</div>
+            <svg class="animate-spin m-auto h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
+                viewBox="0 0 24 24" [ngClass]="!disabled ? 'hidden' : ''">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor"
+                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z">
+                </path>
+            </svg>
         </button>
     </div>
 
