--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<div class="h-screen w-screen dark:bg-slate-800 dark:text-white">
+<div class="flex flex-col h-screen w-screen dark:bg-slate-800 dark:text-white">
   <app-navbar></app-navbar>
-  <div class="w-screen flex flex-col items-center">
+  <div class="w-screen grow flex flex-col items-center">
     <app-e-stop class="w-full"></app-e-stop>
     <app-summon class="w-full"></app-summon>
-    <app-navigate class="w-full"></app-navigate>
+    <app-navigate class="w-full transition-all"
+      [ngClass]="status === Status.AVAILABLE || status === Status.OFFLINE ? '' : ''"></app-navigate>
   </div>
 </div>
