--- a/src/app/summon/summon.component.html
+++ b/src/app/summon/summon.component.html
@@ -5,13 +5,13 @@
     <div class="flex flex-row gap-3 justify-between">
         <select id="summon_location"
             class="block basis-2/3 px-4 py-3 text-base text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-            [(ngModel)]="location" [disabled]="disabled">
+            [(ngModel)]="location" [disabled]="disabled || status !== Status.AVAILABLE">
             <option selected>Choose location</option>
             <option *ngFor="let location of locations" [value]="location">{{location}}</option>
         </select>
         <button type="button"
             class="basis-1/3 self-center text-white bg-blue-700 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 focus:outline-none dark:focus:ring-blue-800"
-            (click)="onSummonClick()" [disabled]="disabled"
+            (click)="onSummonClick()" [disabled]="disabled || status !== Status.AVAILABLE"
             [ngClass]="disabled ? 'cursor-not-allowed' : 'hover:bg-blue-800 dark:hover:bg-blue-700'">
             <div [ngClass]="disabled ? 'hidden' : ''">Summon</div>
             <svg class="animate-spin m-auto h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none"
