--- a/src/app/e-stop/e-stop.component.html
+++ b/src/app/e-stop/e-stop.component.html
@@ -2,6 +2,6 @@
     class="block w-full p-6 border border-gray-200 rounded-lg shadow bg-red-600 dark:border-gray-700 hover:bg-red-700"
     (click)="onStopClicked()">
     <h5 class="mb-2 text-2xl text-center font-bold tracking-tight text-gray-900 dark:text-white">
-        {{ info }}
+        STOP
     </h5>
 </button>
