--- a/src/app/navbar/mode-control/mode-control.component.html
+++ b/src/app/navbar/mode-control/mode-control.component.html
@@ -1,3 +1,6 @@
+<label for="mode_select" class="block mt-2 text-sm font-medium text-gray-900 dark:text-white">
+    Mode Select
+</label>
 <div class="inline-flex rounded-md shadow-sm" role="group">
     <button type="button" class="px-4 py-2 text-sm font-medium rounded-l-lg"
         [ngClass]="mode === Mode.GUIDE ? activeClass : nonActiveClass" (click)="onGuideClick()">
