--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -25,23 +25,14 @@
                 <li>
                     <app-language-select></app-language-select>
                 </li>
-                <li>
-                    <label for="mode_select" class="block mt-2 text-sm font-medium text-gray-900 dark:text-white">
-                        Mode Select
-                    </label>
-                    <app-mode-control id="mode_select" (modeChange)="onModeChange($event)"></app-mode-control>
-                </li>
-                <li>
-                    <label for="lod_select" class="block mt-2 text-sm font-medium text-gray-900 dark:text-white">
-                        Detail Level
-                    </label>
-                    <app-lod-control id="lod_select" (lodChange)="onLODChange($event)"></app-lod-control>
-                </li>
                 <!-- <li>
-                    <app-navbar-button routerLink="/example">example button</app-navbar-button>
+                    <app-mode-control id="mode_select" (modeChange)="onModeChange($event)"></app-mode-control>
                 </li> -->
                 <li>
-                    <app-speed-control (maxSpeedChange)="onMaxSpeedChange($event)"></app-speed-control>
+                    <app-lod-control id="lod_select"></app-lod-control>
+                </li>
+                <li>
+                    <app-speed-control></app-speed-control>
                 </li>
             </ul>
         </div>
